# wordle-solver

./: .gitignore
solver_backend/: .envrc  Cargo.toml  Dockerfile  docker-compose.yml  fly.toml
solver_backend/.cargo/: config.toml
solver_backend/db/pgdata/base/1/: 2619  2696
solver_backend/db/pgdata/base/16384/: 1247  1249  1259  1259_vm  16388  16393  16394  16396  16397  16403  16405  16407  16409  16414  16415  16417  16418  16418_fsm  16418_vm  16422  2224  2579  2604  2606  2608  2610  2619  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  (+6 more)
solver_backend/db/pgdata/base/5/: 2619
solver_backend/db/pgdata/global/: 1260  1262  2671  2676  pg_control
solver_backend/db/pgdata/pg_stat/: pgstat.stat
solver_backend/db/pgdata/pg_xact/: 0000
solver_backend/migrations/: 20230506190911_user_table.down.sql  20230506190911_user_table.up.sql  20230524225240_revoked_tokens.up.sql  20230527043225_word_list.down.sql  20230527043225_word_list.up.sql
solver_backend/src/: lib.rs  main.rs  startup.rs
solver_backend/src/handlers/: game.rs  users.rs
solver_backend/src/models/: game_models.rs  mod.rs  users_models.rs
solver_backend/src/utils/: bcrypt_utils.rs  jwt_utils.rs  mod.rs
solver_frontend/: package-lock.json  package.json
solver_frontend/src/: App.js
solver_frontend/src/auth/: index.js
solver_frontend/src/components/: DeleteModal.js  Login.js  Navbar.js  Register.js  Row.js  Settings.js  Solver.js  WordList.js
