[package]
name = "wordle_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-service = "2.0.2"
actix-web = "4"
bcrypt = "0.14.0"
cargo-modules = "0.8.0"
cargo-udeps = "0.1.39"
cargo-watch = "8.4.0"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
log = "0.4"
serde = "1.0.162"
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-async-std-native-tls", "chrono"] }

